[gd_scene load_steps=19 format=2]

[ext_resource path="res://Player.gd" type="Script" id=1]
[ext_resource path="res://SedanCar.tscn" type="PackedScene" id=2]
[ext_resource path="res://SmokeParticles.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/Map.tscn" type="PackedScene" id=4]
[ext_resource path="res://AudioButton.gd" type="Script" id=5]
[ext_resource path="res://icons/audio_on.png" type="Texture" id=6]
[ext_resource path="res://sounds/engine_idle.ogg" type="AudioStream" id=7]
[ext_resource path="res://sounds/skid.ogg" type="AudioStream" id=8]
[ext_resource path="res://icons/audio_off.png" type="Texture" id=9]
[ext_resource path="res://icons/info.png" type="Texture" id=10]
[ext_resource path="res://sounds/impact.wav" type="AudioStream" id=11]

[sub_resource type="PhysicsMaterial" id=1]
friction = 50.0
rough = true
bounce = 0.1
absorbent = true

[sub_resource type="SphereShape" id=2]

[sub_resource type="Curve" id=3]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.551724, 0.727273 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.0454545 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=4]
curve = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=5]
emission_shape = 2
emission_box_extents = Vector3( 0.1, 0.1, 0.1 )
direction = Vector3( 1, 1, 0 )
gravity = Vector3( 0, 0, 2 )
initial_velocity = 1.0
scale = 0.4
scale_random = 0.1
scale_curve = SubResource( 4 )

[sub_resource type="SphereMesh" id=6]
radial_segments = 8
rings = 8

[sub_resource type="BoxShape" id=7]
extents = Vector3( 0.624811, 0.262891, 1.25507 )

[node name="Main" type="Spatial"]

[node name="Game" type="Spatial" parent="."]

[node name="Player" type="Spatial" parent="Game"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3.76192, 0.896463, 11.2593 )
script = ExtResource( 1 )

[node name="Ball" type="RigidBody" parent="Game/Player"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.873115, 0 )
physics_material_override = SubResource( 1 )
linear_damp = 0.9
angular_damp = 0.9

[node name="CollisionShape" type="CollisionShape" parent="Game/Player/Ball"]
shape = SubResource( 2 )

[node name="CarMesh" parent="Game/Player" instance=ExtResource( 2 )]

[node name="SmokeLeft" parent="Game/Player/CarMesh" instance=ExtResource( 3 )]
process_material = SubResource( 5 )
draw_pass_1 = SubResource( 6 )

[node name="SmokeRight" parent="Game/Player/CarMesh" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0, 1 )
process_material = SubResource( 5 )
draw_pass_1 = SubResource( 6 )

[node name="SceneryRigidBody" type="RigidBody" parent="Game/Player/CarMesh"]
collision_layer = 0
collision_mask = 2
mode = 3
contacts_reported = 1
contact_monitor = true
can_sleep = false

[node name="CollisionShape" type="CollisionShape" parent="Game/Player/CarMesh/SceneryRigidBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.671405, 0 )
shape = SubResource( 7 )

[node name="Lights" type="Spatial" parent="Game/Player/CarMesh"]

[node name="LeftHeadlight" type="SpotLight" parent="Game/Player/CarMesh/Lights"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.457075, 0.64168, -0.499678 )
light_energy = 5.0
spot_range = 7.0
spot_attenuation = 0.482968

[node name="RightHeadlight" type="SpotLight" parent="Game/Player/CarMesh/Lights"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.451017, 0.64168, -0.476595 )
light_energy = 5.0
spot_range = 7.0
spot_attenuation = 0.482968

[node name="LeftBrakelight" type="OmniLight" parent="Game/Player/CarMesh/Lights"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.457075, 0.38388, 1.29889 )
visible = false
light_color = Color( 1, 0.00392157, 0.00392157, 1 )
light_energy = 5.0
omni_range = 1.0

[node name="RightBrakelight" type="OmniLight" parent="Game/Player/CarMesh/Lights"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.446, 0.384, 1.299 )
visible = false
light_color = Color( 1, 0.00392157, 0.00392157, 1 )
light_energy = 5.0
omni_range = 1.0

[node name="Camera" type="Camera" parent="Game/Player"]
transform = Transform( 1, 0, 0, 0, 0.551209, 0.834367, 0, -0.834367, 0.551209, 0, 11.933, 8.35119 )
current = true

[node name="EngineAudio" type="AudioStreamPlayer" parent="Game/Player"]
stream = ExtResource( 7 )
volume_db = -10.0

[node name="ImpactAudio" type="AudioStreamPlayer" parent="Game/Player"]
stream = ExtResource( 11 )
volume_db = -10.0

[node name="SkidAudio" type="AudioStreamPlayer" parent="Game/Player"]
stream = ExtResource( 8 )
volume_db = -80.0

[node name="Map" parent="Game" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0436783, 0.0349541, 0.00075531 )

[node name="UI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 0.540405
margin_right = 0.540405
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="UI"]
anchor_right = 1.0
anchor_bottom = 0.09
margin_bottom = -3.8147e-06
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuButton" type="MenuButton" parent="UI/HBoxContainer"]
margin_left = 912.0
margin_right = 972.0
margin_bottom = 54.0
icon = ExtResource( 10 )
items = [ "W : Accelerate", null, 0, false, false, 0, 0, null, "", false, "S : Brake", null, 0, false, false, 1, 0, null, "", false, "A : Left", null, 0, false, false, 2, 0, null, "", false, "D : Right", null, 0, false, false, 3, 0, null, "", false, "R : Reset", null, 0, false, false, 4, 0, null, "", false ]

[node name="CenterContainer" type="CenterContainer" parent="UI/HBoxContainer"]
margin_left = 976.0
margin_right = 1024.0
margin_bottom = 54.0

[node name="AudioButton" type="TextureButton" parent="UI/HBoxContainer/CenterContainer"]
margin_top = 3.0
margin_right = 48.0
margin_bottom = 51.0
toggle_mode = true
shortcut_in_tooltip = false
action_mode = 0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 9 )
stretch_mode = 3
script = ExtResource( 5 )
[connection signal="body_entered" from="Game/Player/Ball" to="Game/Player" method="_on_Ball_body_entered"]
[connection signal="body_entered" from="Game/Player/CarMesh/SceneryRigidBody" to="Game/Player" method="_on_SceneryRigidBody_body_entered"]
[connection signal="finished" from="Game/Player/EngineAudio" to="Game/Player" method="_on_EngineStart_finished"]
[connection signal="finished" from="Game/Player/ImpactAudio" to="Game/Player" method="_on_EngineStart_finished"]
[connection signal="finished" from="Game/Player/SkidAudio" to="Game/Player" method="_on_EngineStart_finished"]
[connection signal="toggled" from="UI/HBoxContainer/CenterContainer/AudioButton" to="Game/Player" method="_on_AudioButton_toggled"]
